[project]
name = "normfn"
requires-python = ">=3.12"
version = "v0.0.1"

[tool.basedpyright]
reportConstantRedefinition = false # See https://github.com/microsoft/pyright/issues/5265
reportUnusedCallResult = false

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM",
    "D100",
    "D101",
    "D103",
    "D105",
    "D107",
    "FBT001",
    "G004",
    "ISC003",
    "TRY003"
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pexpect>=4.9.0",
]
